Updating all packages and updating Guava to Java 8